smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/2.1/mixins.smithy
$version: "2.1"

namespace smithy.example

@mixin
structure BaseMixin {
    id: String
    name: String
}

structure UsesBase with [BaseMixin] {
    description: String
}

@mixin
string StringMixin

string MixedString with [StringMixin]
